Lab 2: improve mug model and update build/test docs

--- a/Lab 2/Makefile
+++ b/Lab 2/Makefile
@@ -1,32 +1,42 @@
 # Makefile to compile simple svlis applications
 
 CXX = g++
-CXXFLAGS = -DSV_UNIX -pedantic -Wno-write-strings -I/usr/include/svlis
 OPTFLAGS = -g -O3
-LIBS = -lsvlis 
 PROGRAMS = CSGmug
 
-## This works when the includes/libraries are installed in standard places (e.g. /usr/local on ecslab)
-# LIBS =  -lsvlis -lglut -lGLU -lGL -lpthread
-# CXXFLAGS = -DSV_UNIX -pedantic -Wno-write-strings -I/usr/include/svlis
+# Path to an SvLis checkout (override on command line if needed):
+#   make CSGmug SVLIS_DIR=/path/to/SvLis
+SVLIS_DIR ?= $(CURDIR)/SvLis
+UNAME_S := $(shell uname -s)
 
-# This works when there is a copy of SvLis code in $(HOME) directory (but defaults to standard places)
-LIBS = -L$(HOME)/SvLis/lib -lsvlis -lglut -lGLU -lGL -lpthread
-CXXFLAGS = -DSV_UNIX -pedantic -Wno-write-strings -I/usr/include/svlis -I$(HOME)/SvLis/include
+# Build local SvLis library automatically when the checkout exists.
+# Set SVLIS_BUILD=0 to skip this step.
+SVLIS_BUILD ?= 1
 
+CXXFLAGS = -DSV_UNIX -pedantic -Wno-write-strings -DGL_SILENCE_DEPRECATION -I/usr/include/svlis -I"$(SVLIS_DIR)/include"
+LIBS = -L"$(SVLIS_DIR)/lib" -lsvlis -lpthread
 
-.SUFFIXES: .cxx .o
+ifeq ($(UNAME_S),Darwin)
+LIBS += -framework GLUT -framework OpenGL
+else
+LIBS += -lglut -lGLU -lGL
+endif
 
 all: $(PROGRAMS)
 
-.PRECIOUS: %.o
-.cxx.o:
+CSGmug.o: CSGmug.cxx
+ifeq ($(SVLIS_BUILD),1)
+	@if [ -f "$(SVLIS_DIR)/Makefile" ]; then \
+		$(MAKE) -C "$(SVLIS_DIR)" library; \
+	else \
+		echo "Info: $(SVLIS_DIR)/Makefile not found; skipping local SvLis build."; \
+	fi
+endif
 	$(CXX) -c $(OPTFLAGS) $(CXXFLAGS) -o $@ $<
 
-.o:
+CSGmug: CSGmug.o
 	$(CXX) $(OPTFLAGS) -o $@ $< $(LIBS)
 clean:
 	/bin/rm -f *.o *.mod *.ppm *~
 cleanest: clean
 	/bin/rm -f CSGmug difference
-
